# marselotech

./: README.md
capture_image/: setup.cfg  setup.py
capture_image/capture_image/: capturar.py  capturar_caras.py  capturar_caras_real.py  capturar_personas.py  capturar_personas_real.py  capturar_real.py  colabcaras.py  detectar_verde.py  detectar_verde_real.py
custom_interface/: CMakeLists.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
marselotech/: CMakeLists.txt  package.xml
marselotech/install/: local_setup.sh  setup.sh
marselotech/log/: latest_build
marselotech_capture_image/: package.xml  setup.cfg  setup.py
marselotech_capture_image/launch/: detection_server.launch.py  detection_server_sim.launch.py  save_image_server.launch.py  save_image_server_sim.launch.py
marselotech_capture_image/marselotech_capture_image/: capturar.py  capturar_caras_real.py  detectar_verde.py  detectar_verde_real.py  detection_server.py  detection_server_sim.py  key.json  save_image_server.py  save_image_server_sim.py
marselotech_custom_interface/: CMakeLists.txt  package.xml
marselotech_my_nav2_system/: setup.cfg  setup.py
marselotech_my_nav2_system/config/: map.pgm  (+11 more)
marselotech_my_service/: package.xml  setup.cfg  setup.py
marselotech_my_slam/: package.xml  setup.cfg  setup.py
marselotech_my_world/: CMakeLists.txt
marselotech_predict_yolo/: package.xml  setup.cfg  setup.py
marselotech_provide_map/: package.xml  setup.cfg  setup.py
marselotech_show_msg/: package.xml  setup.cfg  setup.py
show_msg/: package.xml
(+109 files in other folders)
